fix: prevent overflow-x

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,7 @@
 // 루트 요소의 기본 글자크기 설정
 html {
   font-size: 10px;
+  overflow-x: hidden;
   overflow-y: visible;
 }
 
